--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/stack": "^5.14.5",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "i": "^0.3.6",
+    "npm": "^7.14.0",
     "pitchfinder": "^2.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -21,8 +23,10 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-recording": "^0.5.1",
+    "react-native-responsive-fontsize": "^0.5.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-tone": "^0.0.4",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
