--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-tone": "^0.0.4",
+    "react-native-version-check-expo": "^3.4.2",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
